--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
     "antd": "^4.12.3",
+    "axios": "^0.21.1",
     "decimal": "0.0.2",
-    "mathjs": "^9.2.0",
+    "mathjs": "^9.3.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
